--- a/cryptopals.cabal
+++ b/cryptopals.cabal
@@ -25,7 +25,7 @@ executable cryptopals
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:    HexParser
+    other-modules:    HexParser, Base64
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
