--- a/cryptopals.cabal
+++ b/cryptopals.cabal
@@ -25,10 +25,10 @@ executable cryptopals
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:    HexParser, Base64
+    other-modules:    HexParser, Base64, LanguageScores, Utils
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base, attoparsec, bytestring, containers, text
+    build-depends:    base, attoparsec, bytestring, containers, text, base64-bytestring, mtl, utf8-string, unordered-containers, hashable
     hs-source-dirs:   app
     default-language: Haskell2010
